feat: implement Jenkinsfile testing

--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -6,4 +6,8 @@ RUN apt-get update && \
     apt-get install -y doxygen git && \
     apt-get clean
 
+# Pre-install Jenkins plugins
+COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
+
 USER jenkins
