--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -3,7 +3,7 @@ FROM jenkins/jenkins:lts
 USER root
 
 RUN apt-get update && \
-    apt-get install -y doxygen git && \
+    apt-get install -y doxygen git python3 python3-pip && \
     apt-get clean
 
 # Pre-install Jenkins plugins
