--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,9 +2,11 @@ FROM jenkins/jenkins:lts
 
 USER root
 
+# Install Doxygen, Python 3, pip, and venv support
 RUN apt-get update && \
-    apt-get install -y doxygen git python3 python3-pip && \
-    apt-get clean
+    apt-get install -y doxygen git python3 python3-pip python3-venv && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Pre-install Jenkins plugins
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
